--- a/plugin/css/chapterViewer.css
+++ b/plugin/css/chapterViewer.css
@@ -26,23 +26,30 @@
     z-index: 1000;
     justify-content: center;
     align-items: center;
+    font-size: 14px;
 }
 
 #cachedChapterViewer > div {
     position: relative;
     width: 90%;
+    max-width: 850px;
     height: 90%;
     background-color: white;
-    padding: 20px;
-    overflow: auto;
+    overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     border-radius: 8px;
+}
+
+#cachedChapterContent {
+    padding: 0 20px 0 25px;
+    overflow: auto;
+    height: 100%;
 }
 
 #closeCachedViewer {
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 15px;
     font-size: 24px;
     background: none;
     border: none;
