--- a/plugin/css/default.css
+++ b/plugin/css/default.css
@@ -30,7 +30,6 @@
     border-bottom: 1px #CCC solid;
 }
 
-
 progress {
     width: 56%;
     height: 31px;
@@ -59,10 +58,6 @@ progress {
 
 [hidden] {
     display: none;
-}
-
-table.chapterList {
-    width: 100%;
 }
 
 section.minWidth {
@@ -96,7 +91,6 @@ button:disabled {
     position:relative;
 }
 
-
 input[type=text], input[type=url], textarea, select, #manualDelayPerChapterTag {
     padding: 4px;
     border: 1px #CCC solid;
@@ -120,63 +114,12 @@ textarea.allSpace {
     width: 69%;
 }
 
-#inputSection table, #chapterUrlsTable {
+#inputSection table {
     width: 100%;
 }
 
-    #chapterUrlsTable input[type=checkbox],
-    #chapterUrlsTable img,
-    #chapterUrlsTable .tooltip {
-        float: left;
-    }
-
-    img.downloadState {
-        height: 1em;
-        margin-top: 3px;
-    }
-
-    .downloadStateDiv {
-        position: relative;
-        display: inline-block;
-    }
-
-    .downloadStateDiv .tooltipText {
-        visibility: hidden;
-        width: 120px;
-        background-color: #808080;
-        color: white;
-        text-align: center;
-        padding: 5px;
-        border-radius: 5px;
-        position: absolute;
-        z-index: 1;
-        top: -5px;
-        left: 105%;
-    }
-
-    .downloadStateDiv:hover .tooltipText {
-        visibility: visible;
-    }
-
-    #chapterUrlsTable input[type=text] {
-        width: 101.5%;
-        position: relative;
-        left: -16px;
-        max-width: 580px;
-    }
-
-    #chapterUrlsTable tbody > tr > th {
-        text-align: center;
-        border-bottom: 1px #CCC solid;
-        padding: 0;
-    }
-
 #inputSection tbody > tr > td:first-child {
     width: 75px;
-}
-
-#chapterUrlsTable > tr > td:first-child, #chapterUrlsTable > tbody > tr > td:nth-child(2) {
-    width: 3px;
 }
 
 button {
