--- a/plugin/css/default.css
+++ b/plugin/css/default.css
@@ -185,6 +185,8 @@ button {
     display: flex;
     justify-content: center;
     border-radius: 8px;
+    padding-top: 2px;
+    gap: 3px;
 }
 
 .sidebar {
