--- a/plugin/css/chaptersTable.css
+++ b/plugin/css/chaptersTable.css
@@ -37,6 +37,56 @@ img.downloadState {
     visibility: visible;
 }
 
+/* Custom tooltips for cache icons */
+.cacheIconWrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.cacheIconWrapper .tooltipText {
+    visibility: hidden;
+    width: 120px;
+    background-color: #808080;
+    color: white;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    left: 105%;
+}
+
+.cacheIconWrapper:hover .tooltipText {
+    visibility: visible;
+}
+
+/* For trash icon in header - position tooltip differently */
+.trashIconWrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.trashIconWrapper .tooltipText {
+    visibility: hidden;
+    width: 150px;
+    background-color: #808080;
+    color: white;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -75px;
+    margin-bottom: 5px;
+}
+
+.trashIconWrapper:hover .tooltipText {
+    visibility: visible;
+}
+
 #chapterUrlsTable input[type=text] {
     width: 101.5%;
     position: relative;
