--- a/plugin/css/chaptersUI.css
+++ b/plugin/css/chaptersUI.css
@@ -9,21 +9,18 @@ table.chapterList {
     float: left;
 }
 
-/* Remove float from cache column items since we're using flexbox */
-.cacheViewColumn .tooltip-wrapper,
-.cacheViewColumn .more-actions-wrapper {
+/* Remove float from chapter status column items since we're using flexbox */
+.chapterStatusColumn .tooltip-wrapper,
+.chapterStatusColumn .more-actions-wrapper {
     float: none;
-}
-
-img.downloadState {
-    height: 1em;
-    margin-top: 3px;
 }
 
 /* General tooltip styles */
 .tooltip-wrapper {
     position: relative;
     display: inline-block;
+    border-radius: 50%;
+    padding: 2px;
 }
 
 .tooltip-wrapper .tooltipText {
@@ -44,29 +41,22 @@ img.downloadState {
     visibility: visible;
 }
 
-/* Tooltip positioning variants */
-.tooltip-right .tooltipText {
-    top: -5px;
-    left: 105%;
-}
-
-.tooltip-top .tooltipText {
-    bottom: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-bottom: 5px;
-}
-
-/* Eye icon tooltip should appear to the left to avoid covering menu */
-.cacheViewColumn .tooltip-wrapper.tooltip-right .tooltipText {
+/* Chapter status tooltips appear to the left to avoid covering menu */
+.chapterStatusColumn .tooltip-wrapper .tooltipText {
     top: -5px;
     right: 105%;
     left: auto;
 }
 
-.downloadStateDiv .tooltipText {
-    top: -5px;
-    left: 105%;
+/* Tooltip positioning for delete button - opens above  */
+.chapterStatusColumn .delete-all-tooltip .tooltipText {
+    bottom: 100%;
+    left: 50%;
+    right: auto;
+    top: auto;
+    transform: translateX(-50%);
+    margin-bottom: 5px;
+    min-width: 180px;
 }
 
 #chapterUrlsTable input[type=text] {
@@ -86,7 +76,7 @@ img.downloadState {
     width: 3px;
 }
 
-.cacheViewColumn {
+.chapterStatusColumn {
     text-align: left;
     height: 20px;
     width: 36px;
@@ -94,36 +84,40 @@ img.downloadState {
     align-items: center;
 }
 
-th.cacheViewColumn {
+th.chapterStatusColumn {
     margin-left: 1px;
 }
 
-.cacheViewColumn img {
+.chapterStatusColumn img {
     width: 16px;
     height: 16px;
     margin: 2px;
     transition: filter 0.2s ease;
 }
 
-/* Make the entire tooltip wrapper area clickable and hoverable */
-.tooltip-wrapper {
+.clickable-icon {
     cursor: pointer;
+    border-radius: 50%;
+    padding: 2px;
+    transition: background-color 0.2s ease;
 }
 
-.tooltip-wrapper:hover img[src*="EyeFill.svg"] {
+.clickable-icon:hover {
+    background-color: rgba(0, 123, 255, 0.1);
+}
+
+.clickable-icon:hover img {
     filter: brightness(1.2);
 }
 
-.tooltip-wrapper:active img[src*="EyeFill.svg"] {
+.clickable-icon:active img {
     filter: brightness(0.8);
 }
 
-.tooltip-wrapper:hover #deleteAllCachedChapters {
-    filter: brightness(0) saturate(100%) invert(13%) sepia(77%) saturate(2217%) hue-rotate(348deg) brightness(96%) contrast(91%);
-}
-
-.tooltip-wrapper:active #deleteAllCachedChapters {
-    filter: brightness(0) saturate(100%) invert(8%) sepia(84%) saturate(2943%) hue-rotate(342deg) brightness(90%) contrast(95%);
+/* Basic tooltip wrapper styles */
+.tooltip-wrapper {
+    position: relative;
+    display: inline-block;
 }
 
 #deleteAllCachedChapters {
@@ -135,37 +129,6 @@ th.cacheViewColumn {
 .more-actions-wrapper {
     position: relative;
     display: inline-block;
-}
-
-.more-actions-icon {
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
-    transition: filter 0.2s ease;
-}
-
-.more-actions-icon:hover {
-    filter: brightness(0) saturate(100%) invert(40%) sepia(96%) saturate(1815%) hue-rotate(197deg) brightness(95%) contrast(101%);
-}
-
-.more-actions-icon:active {
-    filter: brightness(0) saturate(100%) invert(35%) sepia(100%) saturate(2000%) hue-rotate(197deg) brightness(85%) contrast(110%);
-}
-
-/* Download chapter icon */
-.download-chapter-icon {
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
-    transition: filter 0.2s ease;
-}
-
-.download-chapter-icon:hover {
-    filter: brightness(0) saturate(100%) invert(40%) sepia(96%) saturate(1815%) hue-rotate(197deg) brightness(95%) contrast(101%);
-}
-
-.download-chapter-icon:active {
-    filter: brightness(0) saturate(100%) invert(35%) sepia(100%) saturate(2000%) hue-rotate(197deg) brightness(85%) contrast(110%);
 }
 
 .more-actions-menu {
