--- a/plugin/css/chaptersUI.css
+++ b/plugin/css/chaptersUI.css
@@ -4,7 +4,7 @@ table.chapterList {
 }
 
 #chapterUrlsTable input[type=checkbox],
-#chapterUrlsTable img,
+#chapterUrlsTable svg,
 #chapterUrlsTable .tooltip {
     float: left;
 }
@@ -88,7 +88,7 @@ th.chapterStatusColumn {
     margin-left: 1px;
 }
 
-.chapterStatusColumn img {
+.chapterStatusColumn svg {
     width: 16px;
     height: 16px;
     margin: 2px;
@@ -106,11 +106,13 @@ th.chapterStatusColumn {
     background-color: rgba(0, 123, 255, 0.1);
 }
 
-.clickable-icon:hover img {
+.clickable-icon:hover svg {
+    fill: dodgerblue;
     filter: brightness(1.2);
 }
 
-.clickable-icon:active img {
+.clickable-icon:active svg {
+    fill: dodgerblue;
     filter: brightness(0.8);
 }
 
@@ -170,7 +172,7 @@ th.chapterStatusColumn {
     background-color: #f5f5f5;
 }
 
-.more-actions-menu .menu-item img {
+.more-actions-menu .menu-item svg {
     width: 14px;
     height: 14px;
     margin-right: 8px;
