--- a/plugin/css/chapterUrlsUI.css
+++ b/plugin/css/chapterUrlsUI.css
@@ -1,13 +1,66 @@
-#chapterUrlsTable,
-table.chapterList {
+#chapterUrlsTable {
     border-collapse: collapse;
     width: 100%;
-}
 
-#chapterUrlsTable input[type=checkbox],
-#chapterUrlsTable svg,
-#chapterUrlsTable .tooltip {
-    float: left;
+    input[type=text] {
+        width: 100%;
+        max-width: 580px;
+        box-sizing: border-box;
+    }
+
+    input[type=checkbox],
+    svg,
+    .tooltip {
+        float: left;
+    }
+
+    .greenBox {
+        accent-color: green;
+    }
+
+    tbody > tr > th {
+        text-align: center;
+        border-bottom: 1px #CCC solid;
+        padding: 0 2px;
+
+        .tooltip-wrapper {
+            float: left;
+            vertical-align: bottom;
+        }
+    }
+
+    /* This is the all the checkbox cells. */
+    /* This width is because tables suck? */
+    tr > td:first-child {
+        width: 20px;
+    }
+
+    td {
+        padding: 2px;
+    }
+
+    th.chapterStatusColumn {
+        text-align: left;
+    }
+
+    td.chapterStatusColumn {
+        text-align: left;
+        display: flex;
+        align-items: center;
+        /* This is temporary until I replace the table with a flex layout. */
+        margin-right: -10px;
+    }
+
+    svg {
+        width: 16px;
+        height: 16px;
+        vertical-align: bottom;
+    }
+
+    .chapterStatusColumn svg {
+        margin: 2px;
+        transition: filter 0.2s ease;
+    }
 }
 
 /* Remove float from chapter status column items since we're using flexbox */
@@ -62,41 +115,11 @@ table.chapterList {
 }
 
 #chapterSelectInfo svg {
-    height: 16px;
-    width: 16px;
     color: #808080;
 }
 
 #deleteAllCachedChapters svg {
     color: #555555;
-}
-
-#chapterUrlsTable input[type=text] {
-    max-width: 580px;
-}
-
-#chapterUrlsTable tbody > tr > th {
-    text-align: center;
-    border-bottom: 1px #CCC solid;
-    padding: 0;
-}
-
-th.chapterStatusColumn {
-    text-align: left;
-}
-
-td.chapterStatusColumn {
-    text-align: left;
-    height: 20px;
-    display: flex;
-    align-items: center;
-}
-
-.chapterStatusColumn svg {
-    width: 16px;
-    height: 16px;
-    margin: 2px;
-    transition: filter 0.2s ease;
 }
 
 .clickable-icon {
@@ -151,6 +174,34 @@ td.chapterStatusColumn {
     opacity: 0;
     transform: translateY(-5px);
     transition: opacity 0.2s ease, transform 0.2s ease, visibility 0.2s ease;
+
+    .menu-item {
+        display: flex;
+        align-items: center;
+        padding: 8px 12px;
+        cursor: pointer;
+        border-bottom: 1px solid #eee;
+        transition: background-color 0.2s ease;
+
+        svg {
+            width: 14px;
+            height: 14px;
+            margin-right: 8px;
+        }
+
+        span {
+            font-size: 14px;
+            color: #333;
+        }
+    }
+
+    .menu-item:hover {
+        background-color: #f5f5f5;
+    }
+
+    .menu-item:last-child {
+        border-bottom: none;
+    }
 }
 
 .more-actions-menu.show {
@@ -158,32 +209,3 @@ td.chapterStatusColumn {
     opacity: 1;
     transform: translateY(0);
 }
-
-.more-actions-menu .menu-item {
-    display: flex;
-    align-items: center;
-    padding: 8px 12px;
-    cursor: pointer;
-    border-bottom: 1px solid #eee;
-    transition: background-color 0.2s ease;
-}
-
-.more-actions-menu .menu-item:last-child {
-    border-bottom: none;
-}
-
-.more-actions-menu .menu-item:hover {
-    background-color: #f5f5f5;
-}
-
-.more-actions-menu .menu-item svg {
-    width: 14px;
-    height: 14px;
-    margin-right: 8px;
-}
-
-.more-actions-menu .menu-item span {
-    font-size: 14px;
-    color: #333;
-}
-
